# script

./: LICENSE  README.md  ToDo.txt  einstein.aladdin  scripts.cabal  simple.aladdin
src/: Abu.hs  Aladdin.hs  Aladdin.md  Jasmine.md  LGS.md  PGS.md  Z.md
src/Abu/: Main.hs
src/Aladdin/: Aladdin.md  Main.hs
src/Aladdin/Back/: BackEnd.hs
src/Aladdin/Back/Base/: Constant.hs  Disagreement.hs  Identifier.hs  InferenceRule.hs  Labeling.hs  ReadTerm.hs  Rule.hs  ShowTerm.hs  TermNode.hs  UniqueSymbol.hs  VarBinding.hs
src/Aladdin/Back/Base/TermNode/: Read.hs  Show.hs  Util.hs
src/Aladdin/Back/Kernel/: Constraint.hs  Disagreement.hs  HOPU.hs  Reducer.hs  Runtime.hs  Solver.hs
src/Aladdin/Back/Kernel/HOPU/: Bind.hs  MkSubst.hs  Select.hs  Simplify.hs  Test.hs  Util.hs
src/Aladdin/Back/Kernel/Reducer/: Util.hs
src/Aladdin/Back/Kernel/Runtime/: Instantiation.hs  Instantiator.hs  LogicalOperator.hs  RuntimeError.hs  Transition.hs  Util.hs
src/Aladdin/Back/Kernel/Solver/: FactInstantiation.hs  Util.hs
src/Aladdin/Back/Runtime/: Util.hs
src/Aladdin/BackEnd/: Back.hs
src/Aladdin/BackEnd/Kernel/: HOPU.hs  KernelTest.hs  Runtime.hs  Solver.hs
src/Aladdin/Front/: FrontEnd.hs  Header.hs
src/Aladdin/Front/Analyzer/: Lexer.hs  Lexer.hsdoc  Parser.hs  Parser.hsdoc
src/Aladdin/Front/Base/: ID.hs  KindExpr.hs  SLoc.hs  TermExpr.hs  TypeExpr.hs
src/Jasmine/: Main.hs
src/LGS/: Main.hs  Make.hs  Show.hs  Util.hs
src/Lib/: Base.hs  Tests.hs
src/Lib/Generator/: LGS.hs  PGS.hs
src/Lib/Generator/LGS/: Make.hs  Read.hs  Show.hs  Util.hs
src/Lib/Generator/PGS/: Make.hs  Read.hs  Show.hs  Util.hs
src/Lib/Text/: PC.hs  Ppr.hs
src/Lib/Text/PC/: Base.hs  Expansion.hs  Regex.hs
src/PGS/: Main.hs  Show.hs
src/Z/: PC.hs  PM.hs  Util.hs
src/Z/Algorithm/: Sort.hs  Sorting.hs
src/Z/PC/: Base.hs
src/Z/PC/Base/: Test.hs
src/Z/Text/: Doc.hs  PC.hs  Ppr.hs
src/Z/Text/Doc/: Internal.hs  Viewer.hs
src/Z/Text/PC/: Base.hs  Expansion.hs  Loc.hs  RegEx.hs  Test.hs
