name: scripts
version: 0.0.0.0
synopsis: My programming languages
description: Please see README.md
homepage: https://github.com/KiJeong-Lim/scripts
license: BSD3
license-file: LICENSE
author: KiJeong Lim
maintainer: gijungdduk@naver.com
copyright: 2020-2021, KiJeong Lim
build-type: Simple
cabal-version: >= 1.10
library Z
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5
    exposed-modules:
    other-modules:
executable LGS
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5
    main-is: LGS/Main.hs
    other-modules:
executable PGS
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5
    main-is: PGS/Main.hs
    other-modules:
executable Aladdin
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5
    main-is: Aladdin/Main.hs
    other-modules:
executable Jasmine
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5
    main-is: Jasmine/Main.hs
    other-modules:
