name: scripts
version: 0.0.0.0
synopsis: My programming languages
description: Please see README.md
homepage: https://github.com/KiJeong-Lim/scripts
license: BSD3
license-file: LICENSE
author: KiJeong Lim
maintainer: gijungdduk@naver.com
copyright: 2020-2021, KiJeong Lim
build-type: Simple
cabal-version: >= 1.10
library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, QuickCheck >= 2.13, checkers >= 0.5, pretty-terminal >= 0.1.0.0
    exposed-modules:
        Z.Algorithm.Sort
        Z.Text.Doc
        Z.Text.PC
        Z.Util
    other-modules:
        Z.Text.Doc.Viewer
        Z.Text.PC.Base
        Z.Text.PC.Expansion
        Z.Text.PC.Loc
        Z.Text.PC.RegEx
        Z.Text.PC.Test
executable LGS
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, QuickCheck >= 2.13, checkers >= 0.5, pretty-terminal >= 0.1.0.0
    main-is: LGS/Main.hs
    other-modules:
executable PGS
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, QuickCheck >= 2.13, checkers >= 0.5, pretty-terminal >= 0.1.0.0
    main-is: PGS/Main.hs
    other-modules:
executable Aladdin
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, QuickCheck >= 2.13, checkers >= 0.5, pretty-terminal >= 0.1.0.0
    main-is: Aladdin/Main.hs
    other-modules:
executable Jasmine
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, QuickCheck >= 2.13, checkers >= 0.5, pretty-terminal >= 0.1.0.0
    main-is: Jasmine/Main.hs
    other-modules:
