name: scripts
version: 0.0.0.0
synopsis: scripts for me
description: Please see README.md
homepage: https://github.com/KiJeong-Lim/scripts
license: MIT
license-file: LICENSE
author: KiJeong Lim
maintainer: gijungdduk@naver.com
copyright: 2020-2021, KiJeong Lim
build-type: Simple
cabal-version: >= 1.10
library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, QuickCheck >= 2.13, checkers >= 0.5, pretty-terminal >= 0.1.0.0
    exposed-modules:
executable scripts
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, QuickCheck >= 2.13, checkers >= 0.5, pretty-terminal >= 0.1.0.0
    main-is: Main.hs
    other-modules:
